force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/AARPCFS_ADS_Course_Permissions__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used prefix: A - all records, M - my records, E - edit, V - view, U - upload</description>
    <label>AARPCFS_ADS_Course_Permissions</label>
</CustomObject>