force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/A_Manage_Course_Button__c.field-meta.xml
<CustomField>
    <fullName>A_Manage_Course_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A Manage Course Button</label>
    <type>Checkbox</type>
</CustomField>