force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/A_New_Event_Button__c.field-meta.xml
<CustomField>
    <fullName>A_New_Event_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A New Event Button</label>
    <type>Checkbox</type>
</CustomField>