force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/A_View_Events_List__c.field-meta.xml
<CustomField>
    <fullName>A_View_Events_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A View Events List</label>
    <type>Checkbox</type>
</CustomField>