force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/Add_Host__c.field-meta.xml
<CustomField>
    <fullName>Add_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Host</label>
    <type>Checkbox</type>
</CustomField>