force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/ADS_Role__c.field-meta.xml
<CustomField>
    <fullName>ADS_Role__c</fullName>
    <label>ADS Role</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>