force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/Cancel_Courses__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Courses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Courses</label>
    <type>Checkbox</type>
</CustomField>