force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/Course_Completion_Button__c.field-meta.xml
<CustomField>
    <fullName>Course_Completion_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Completion Button</label>
    <type>Checkbox</type>
</CustomField>