force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/E_Close_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Close_Out_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E Close Out Status</label>
    <type>Checkbox</type>
</CustomField>