force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/Edit_Host__c.field-meta.xml
<CustomField>
    <fullName>Edit_Host__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Host</label>
    <type>Checkbox</type>
</CustomField>