force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/Edit_Not_Active_Courses__c.field-meta.xml
<CustomField>
    <fullName>Edit_Not_Active_Courses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User can see &quot;Course Details&quot; button for not active courses</description>
    <label>Edit Not Active Courses</label>
    <type>Checkbox</type>
</CustomField>