force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/M_Access_Roster__c.field-meta.xml
<CustomField>
    <fullName>M_Access_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M Access Roster</label>
    <type>Checkbox</type>
</CustomField>