force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/M_Edit_Course__c.field-meta.xml
<CustomField>
    <fullName>M_Edit_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M Edit Course</label>
    <type>Checkbox</type>
</CustomField>