force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/M_New_Event_Button__c.field-meta.xml
<CustomField>
    <fullName>M_New_Event_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M New Event Button</label>
    <type>Checkbox</type>
</CustomField>