force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/M_Order_Materials__c.field-meta.xml
<CustomField>
    <fullName>M_Order_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M Order Materials</label>
    <type>Checkbox</type>
</CustomField>