force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/M_Submit_In_Course__c.field-meta.xml
<CustomField>
    <fullName>M_Submit_In_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M Submit In Course</label>
    <type>Checkbox</type>
</CustomField>