force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/Role_Priority__c.field-meta.xml
<CustomField>
    <fullName>Role_Priority__c</fullName>
    <label>Role Priority</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>