force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/U_Participant_Info__c.field-meta.xml
<CustomField>
    <fullName>U_Participant_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>U Participant Info</label>
    <type>Checkbox</type>
</CustomField>