force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/V_Participant_Info__c.field-meta.xml
<CustomField>
    <fullName>V_Participant_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V Participant Info</label>
    <type>Checkbox</type>
</CustomField>