force-app/main/default/objects/AARPCFS_ADS_Course_Permissions__c/fields/VTM_Profile__c.field-meta.xml
<CustomField>
    <fullName>VTM_Profile__c</fullName>
    <label>VTM Profile</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>